ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: local.service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-site-service
                port:
                  number: 80
